# peopleDocTest

./: .gitignore
restaurant-api/: Dockerfile  README.md  docker-compose.yml  mongo-init.js  pyproject.toml
restaurant-api/src/backend/: main.py  restaurant.py
restaurant-api/src/models/: restaurant.py
restaurant-api/tests/: main.py
weather-cli/: city_weather.py
