[tool.poetry]
name = "restaurant_api"
version = "0.1.0"
description = ""
authors = ["Benoît Latinier <benoit@latinier.fr>"]

[tool.poetry.scripts]
project-tests = "nosetests -vv --with-xunit --all-modules --with-coverage --cover-inclusive --cover-xml --cover-xml-file=coverage.xml --cover-package=src"

[tool.poetry.dependencies]
python = "^3.5"
Flask = "^1.0"
gunicorn = "^19.9"
mongoengine = "^0.17.0"
Flask-RESTful = "^0.3.7"
blinker = "^1.4"
flake8 = "^3.7"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
Flask-Testing = "^0.7.1"
ipdb = "^0.11.0"
coverage = "^4.5"
nose = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
